k8s/api-hub-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-hub-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-hub-server
  template:
    metadata:
      labels:
        component: api-hub-server
    spec:
      containers:
        - name: api-hub-server
          image: 192.168.196.28:5000/api-hub-server:v1.0
          ports:
            - containerPort: 4000
