k8s/api-hub-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hub-server-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 32001
  selector:
    component: api-hub-server
