k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hub-server-service
spec:
  type: ClusterIP
  selector:
    component: api-hub-server
  ports:
    - port: 4000
      targetPort: 4000
