k8s/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hub-server
spec:
  type: LoadBalancer
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 32000
  selector:
    component: web-server
